# monico

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  TODO.md  architecture.md  contributing.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml  release.yml
monic/: __init__.py  __main__.py  bootstrap.py  config.py  utils.py
monic/cli/: __init__.py  add.py  create.py  delete.py  list.py  run.py  run_manager.py  run_worker.py  setup.py  status.py  utils.py  version.py
monic/core/: app.py  manager.py  monitor.py  probe.py  storage.py  task.py  worker.py
monic/storage/: local.py  pg.py
monico/: __init__.py  __main__.py  bootstrap.py  config.py  utils.py
monico/cli/: __init__.py  create.py  delete.py  list.py  run.py  run_manager.py  run_worker.py  setup.py  status.py  utils.py  version.py
monico/core/: __init__.py  app.py  manager.py  monitor.py  storage.py  worker.py
monico/storage/: common.py  pg.py  sqlite.py
tests/: bootstrap.py  storage.py  test_utils.py
tests/integration/cli/: __init__.py  test_create.py  test_delete.py  test_list.py  test_run.py  test_run_manager.py  test_run_worker.py  test_setup_cmd.py  test_version.py
tests/integration/storage/: fixtures.py  storage_backend_test_suite.py  test_pg.py  test_sqlite.py
tests/unit/: storage.py  test_bootstrap.py  test_config.py  test_utils.py
tests/unit/cli/: test_utils.py
tests/unit/core/: test_app.py  test_manager.py  test_monitor.py  test_probe.py  test_storage.py  test_task.py  test_worker.py
