[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monico"
authors = [
    {name = "Andrew Savchyn", email = "dev@scorpil.com"},
]
description = "Monico is a simple command-line utility for efficiently monitoring and analyzing the availability of websites."
requires-python = ">=3.11"
keywords = ["monitoring", "uptime", "networking", "web", "http", "status-check"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
version = "0.1.dev0"
dynamic = ["dependencies", "readme"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type='text/markdown'}

[project.scripts]
monico = "monico:main"
