[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monico"
authors = [
    {name = "Andrew Savchyn", email = "dev@scorpil.com"},
]
description = "Monico is a simple command-line utility for efficiently monitoring and analyzing the availability of websites."
requires-python = ">=3.11"
keywords = ["monitoring", "uptime", "networking", "web", "http", "status-check"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "aiohttp==3.9.0",
    "aiodns==3.1.1",
    "click==8.1.7",
    "toml==0.10.2",
    "rich==13.6.0",
]
version = "0.1.dev1"
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type='text/markdown'}

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "aioresponses==0.7.6",
]
postgres = [
    "psycopg2==2.9.9"
]

[project.scripts]
monico = "monico:main"
